import { AdapterRequest } from '@chainlink/types'
import { util } from '@chainlink/ea-bootstrap'
import http from 'http'
import nock from 'nock'
import request from 'supertest'
import { server as startServer } from '../../src'
import { mockCryptoEndpointFailure, mockCryptoEndpointSuccess } from './cryptoFixtures'
import { mockVwapEndpointFailure, mockVwapEndpointSuccess } from './vwapFixtures'

let oldEnv: NodeJS.ProcessEnv

describe('bravenewcoin', () => {
  let server: http.Server
  const req = request('localhost:8080')

  beforeAll(async () => {
    oldEnv = JSON.parse(JSON.stringify(process.env))
    process.env.CACHE_ENABLED = 'false'
    if (util.parseBool(process.env.RECORD)) {
      nock.recorder.rec()
    } else {
      process.env.API_KEY = 'mock-api-key'
      process.env.CLIENT_ID = 'mock-client-id'
    }
    server = await startServer()
  })
  afterAll((done) => {
    process.env = oldEnv
    if (util.parseBool(process.env.RECORD)) {
      nock.recorder.play()
    }

    nock.restore()
    nock.cleanAll()
    nock.enableNetConnect()
    server.close(done)
  })

  describe('when making a request to bravenewcoin to crypto endpoint', () => {
    const cryptoRequest: AdapterRequest = {
      id: '1',
      data: {
        endpoint: 'crypto',
        base: 'ETH',
        quote: 'BTC',
      },
    }

    describe('when sending well-formed request', () => {
      it('should reply with success', async () => {
        mockCryptoEndpointSuccess()
        const response = await req
          .post('/')
          .send(cryptoRequest)
          .set('Accept', '*/*')
          .set('Content-Type', 'application/json')
          .expect('Content-Type', /json/)
          .expect(200)
        expect(response.body).toMatchSnapshot()
      })
    })

    describe('when sending request without API key', () => {
      it('should reply with failure', async () => {
        mockCryptoEndpointFailure()
        const response = await req
          .post('/')
          .send(cryptoRequest)
          .set('Accept', '*/*')
          .set('Content-Type', 'application/json')
          .expect('Content-Type', /json/)
          .expect(403)
        expect(response.body).toMatchSnapshot()
      })
    })
  })

  describe('when making a request to bravenewcoin to vwap endpoint', () => {
    const vwapRequest: AdapterRequest = {
      id: '2',
      data: {
        endpoint: 'vwap',
        base: 'ETH',
      },
    }

    describe('when sending well-formed request', () => {
      it('should reply with success', async () => {
        mockVwapEndpointSuccess()
        const response = await req
          .post('/')
          .send(vwapRequest)
          .set('Accept', '*/*')
          .set('Content-Type', 'application/json')
          .expect('Content-Type', /json/)
          .expect(200)
        expect(response.body).toMatchSnapshot()
      })
    })

    describe('when sending request without API key', () => {
      it('should reply with failure', async () => {
        mockVwapEndpointFailure()
        const response = await req
          .post('/')
          .send(vwapRequest)
          .set('Accept', '*/*')
          .set('Content-Type', 'application/json')
          .expect('Content-Type', /json/)
          .expect(403)
        expect(response.body).toMatchSnapshot()
      })
    })
  })
})
