// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bravenewcoin when making a request to bravenewcoin to crypto endpoint when sending request without API key should reply with failure 1`] = `
Object {
  "error": Object {
    "message": "Request failed with status code 403",
    "name": "AdapterError",
  },
  "jobRunID": "1",
  "status": "errored",
  "statusCode": 403,
}
`;

exports[`bravenewcoin when making a request to bravenewcoin to crypto endpoint when sending well-formed request should reply with success 1`] = `
Object {
  "data": Object {
    "result": 0.05986385840449063,
  },
  "jobRunID": "1",
  "result": 0.05986385840449063,
  "statusCode": 200,
}
`;

exports[`bravenewcoin when making a request to bravenewcoin to vwap endpoint when sending request without API key should reply with failure 1`] = `
Object {
  "error": Object {
    "message": "Request failed with status code 403",
    "name": "AdapterError",
  },
  "jobRunID": "2",
  "status": "errored",
  "statusCode": 403,
}
`;

exports[`bravenewcoin when making a request to bravenewcoin to vwap endpoint when sending well-formed request should reply with success 1`] = `
Object {
  "data": Object {
    "result": 3821.520292860939,
  },
  "jobRunID": "2",
  "result": 3821.520292860939,
  "statusCode": 200,
}
`;
